<resources>
    <string name="app_name">Cinemax</string>

    // Onboard
    <string name="onboard_title_first">Access Anywhere</string>
    <string name="onboard_title_second">Updated Movies</string>
    <string name="onboard_title_third">Stay Healthy</string>
    <string name="onboard_desc_first">Movies can be accessed\nfrom anywhere in your house to\nhelp you.</string>
    <string name="onboard_desc_second">Movie &amp; TV information and\nupdates movie trailer</string>
    <string name="onboard_desc_third">Watch to your favorite movie &amp; tv anywhere\nwithout an internet connection</string>

    // Button
    <string name="btn_onboard">Get Started</string>
    <string name="btn_next">Next</string>
    <string name="onboard_image">Onboard Image</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="continued">Continue</string>
    <string name="resend"><u>Resend</u></string>

    <string name="auth_desc">Enter your registered\nPhone Number to Sign Up</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_account">I already have an account?</string>
    <string name="login">Login</string>
    <string name="or_sign_up_with">Or Sign up with</string>
    <string name="google_sign_up">Google Sign Up</string>
    <string name="back_icon">Back Icon</string>
    <string name="welcome_back">Welcome back! Please enter\nyour details.</string>

    // Edit Text
    <string name="hint_1">1</string>
    <string name="hint_2">2</string>
    <string name="hint_3">3</string>
    <string name="hint_4">4</string>
    <string name="placeholder_email">Email Address</string>
    <string name="label_email">Email</string>
    <string name="placeholder_password">••••••••</string>
    <string name="label_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="lets_get_started">Let\'s get started</string>
    <string name="latest_movie_desc">The latest movies and series\nare here</string>
    <string name="full_name">Full Name</string>
    <string name="terms_cond">I agree to the <a href="http://www.google.com">Terms and Services</a>\nand <a href="http://www.google.com">Privacy Policy</a></string>

    // Text
    <string name="reset_password">Reset Password</string>
    <string name="recover_password">Recover your account password</string>
    <string name="verifying_your_acc">Verifying Your Account</string>
    <string name="just_sent_4_digit">We have just sent you 4 digit code via your email\n%s</string>
    <string name="did_not_received_code">Did not received code? </string>
    <string name="create_new_password">Create New Password</string>
    <string name="enter_password">Enter your new password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>