<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/primary_dark"
    android:padding="24dp"
    tools:context=".presentation.ui.auth.verification.VerifyFragment">

    <ImageButton
        android:id="@+id/ibBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_icon_header"
        android:contentDescription="@string/back_icon"
        android:minWidth="48dp"
        android:minHeight="48dp"
        android:src="@drawable/ic_navigate_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/text_white" />

    <TextView
        android:id="@+id/textView3"
        style="@style/MontserratSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/verifying_your_acc"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ibBack" />

    <TextView
        android:id="@+id/textView4"
        style="@style/MontserratMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/just_sent_4_digit"
        android:textAlignment="center"
        android:textColor="@color/text_grey"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/etFirstOtp"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_edit_text_otp"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/hint_1"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="1"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@color/text_white"
        android:textColorHint="@color/text_dark_grey"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etSecondOtp"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_edit_text_otp"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/hint_2"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="1"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@color/text_white"
        android:textColorHint="@color/text_dark_grey"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/etFirstOtp"
        app:layout_constraintStart_toEndOf="@+id/etFirstOtp"
        app:layout_constraintTop_toTopOf="@+id/etFirstOtp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etThirdOtp"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_edit_text_otp"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/hint_3"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="1"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@color/text_white"
        android:textColorHint="@color/text_dark_grey"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/etSecondOtp"
        app:layout_constraintStart_toEndOf="@+id/etSecondOtp"
        app:layout_constraintTop_toTopOf="@+id/etSecondOtp"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/etFourOtp"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/bg_edit_text_otp"
        android:fontFamily="@font/montserrat_semibold"
        android:hint="@string/hint_4"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:maxLength="1"
        android:maxLines="1"
        android:textAlignment="center"
        android:textColor="@color/text_white"
        android:textColorHint="@color/text_dark_grey"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/etThirdOtp"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toEndOf="@+id/etThirdOtp"
        app:layout_constraintTop_toTopOf="@+id/etThirdOtp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btnSignUp"
        style="@style/MontserratMedium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="18dp"
        android:text="@string/continued"
        android:textSize="16sp"
        app:backgroundTint="@color/primary_blue"
        app:cornerRadius="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFirstOtp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/did_not_received_code"
        android:textColor="@color/text_dark_grey"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUp"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="@+id/btnSignUp"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/tvResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/resend"
        android:textColor="@color/primary_blue"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />


</androidx.constraintlayout.widget.ConstraintLayout>