<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    android:padding="24dp">

    <ImageView
        android:id="@+id/ivOnboard"
        android:layout_width="330dp"
        android:layout_height="250dp"
        android:contentDescription="@string/onboard_image"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.20"
        tools:src="@color/primary_blue" />

    <TextView
        android:id="@+id/tvTitleOnboard"
        style="@style/MontserratSemiBold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:lineSpacingExtra="8dp"
        android:text="@string/onboard_title_first"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivOnboard" />

    <TextView
        android:id="@+id/tvDescOnboard"
        style="@style/MontserratMedium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:lineSpacingExtra="3dp"
        android:text="@string/onboard_desc_first"
        android:textAlignment="center"
        android:textColor="@color/text_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleOnboard" />

</androidx.constraintlayout.widget.ConstraintLayout>